# glasuvai

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile.dev  LICENSE  PLAN.md  README.md  docker-compose.yml  flake.nix
.cargo/: config.toml
.serena/: project.yml
.serena/memories/: code_style.md  project_overview.md  suggested_commands.md  task_completion.md
data/elections/bg-na51-2024/: SOURCES.md  election.toml  mirs.toml  parties.toml
data/elections/bg-na51-2024/candidates/: mir-22.toml  mir-23.toml  mir-24.toml
data/elections/bg-na51-2024/export/: cik_parties.txt  local_candidates.txt  local_parties.txt  protocols.txt  readme.txt  sections.txt
docs/: milestone-01-foundation.md  milestone-02-crypto-primitives.md  milestone-03-ballot-encoding.md  milestone-04-bulletin-board.md  milestone-05-identity-voting.md  milestone-06-tally-decryption.md  milestone-07-verifier.md  milestone-08-web-client-demo.md  milestone-09-code-kiosk.md  milestone-10-station-override.md  milestones-overview.md  plan-00-index.md  plan-01-system-overview.md  plan-02-identity-authentication.md  plan-03-ballot-structure.md  plan-04-cryptographic-protocol.md  plan-05-bulletin-board.md  plan-06-tallying-results.md  plan-07-build-verification.md  plan-08-system-components.md  plan-09-voter-experience.md  plan-10-security-analysis.md  plan-11-identity-code-distribution.md  plan-12-infrastructure-topology.md  plan-13-legal-regulatory.md  plan-14-project-phases.md  plan-15-fallback-degradation.md  plan-16-accessibility.md  plan-17-design-decisions.md
scripts/: docker-dev.sh
