[workspace]
resolver = "2"
members = [
    "packages/crypto",
    "packages/election",
    "packages/admin",
    # Future milestones:
    # "packages/crypto-wasm",
    # "packages/bulletin-board",
    # "packages/identity-provider",
    # "packages/voting-server",
    # "packages/tally",
    # "packages/verifier",
    # "packages/trustee-tool",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.release.package.glasuvai-crypto-wasm]
opt-level = "z"  # Minimize WASM binary size
